--- a/2018/Makefile
+++ b/2018/Makefile
@@ -1,9 +1,9 @@
-INPUT ?= ./file_1MB.txt
+INPUT ?= ./SampleText.txt
 OUTPUT ?= ./output.txt
 
 
 test:
-	python2 receiver.py > $(OUTPUT) & time python2 sender.py > $(INPUT) &
+	python2 receiver.py > $(OUTPUT) & time python2 sender.py < $(INPUT) &
 diff:
 	diff $(INPUT) $(OUTPUT)
 kill:
